<resources>
    <string name="app_name">安卓安卓</string>
    <string name="splash_jump">跳过</string>
    <string name="percent">%</string>

    <!-- menu_main.xml -->
    <string name="setting">设置</string>
    <string name="about">关于&#8230;</string>
    <string name="exit">退出</string>

    <!-- menu_bookshelf.xml -->
    <string name="refresh">刷新</string>
    <string name="add_folder">添加目录</string>

    <!-- menu_reader.xml -->
    <string name="night_mode">夜间模式</string>
    <string name="skip_to">跳转至&#8230;</string>
    <string name="save_bookmark">增加书签</string>
    <string name="view_bookmark">浏览书签</string>
    <string name="brightness">亮度</string>
    <string name="back">返回</string>

    <!-- main.xml -->
    <string name="copyright">CopyRight 2011 小雨晨光工作室</string>

    <!-- setting.xml -->
    <string name="view_font">文字预览</string>
    <string name="select_font_size">请选择文字大小</string>
    <string name="select_font_color">请选择文字颜色</string>
    <string name="select_background">请选择背景风格</string>

    <!-- bookmark_list.xml -->
    <string name="cancel">取消</string>
    <string name="go_mark">跳转</string>
    <string name="delete">删除</string>

    <!-- bookmark_dialog.xml -->
    <string name="sure">确定</string>

    <string name="events">Important Events</string>
    <string name="memo1">Tasks &amp; Memo</string>
    <string name="test_memo">testMemo</string>
    <string name="option_main">OptionMain</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sta">Sta</string>
    <string name="Dt">Date &amp; Time</string>
    <string name="bgd_title">
		<b>Background</b>
	</string>
    <string name="bgd_option">
		<b>set Background</b>
	</string>
    <string name="bgd_dtl">set background with picture</string>
    <string name="hdy_title">
		<b>Holidays</b>
	</string>
    <string name="hdy_option">
		<b>set Holidays</b>
	</string>
    <string name="hdy_dtl">select national holidays</string>
    <string name="date_title">
		<b>Date &amp; Time</b>
	</string>
    <string name="date_option">set The First Day</string>
    <string name="date_dtl">set The First Day for week</string>
    <string name="abt_title">
		<b>About</b>
	</string>
    <string name="abt_option">
		<b>About Memorandum</b>
	</string>
    <string name="abt_dtl">version information,etc.</string>
    <string name="abt_info">Memorandum\nversion:\t1.0alpha\nEmail:\tnwcfleshwound@gmail.com\n
	</string>
    <string name="abt_close">Close</string>
    <string name="hdy_title1">
		<b>National Holidays</b>
	</string>
    <string name="hdy_aqe">
		<b>Acquire</b>
	</string>
    <string name="hdy_cel">
		<b>Cancel</b>
	</string>
    <string name="bgd_enable_bg">Enable Background</string>
    <string name="bgd_color">Background color transparency.</string>
    <string name="bgd_sp_bg_pic">
		<b>\u0020\u0020select portrait\u0020\u0020\n background picture</b>
	</string>
    <string name="bgd_upd">
		<b>Update</b>
	</string>
    <string name="china">China</string>
    <string name="japan">Japan</string>
    <string name="america">America</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="previous_event"> ＜＜  </string>
    <string name="new_event">New Event</string>
    <string name="next_event"> ＞＞  </string>
    <string name="memo_list">Memo List</string>
    <string name="event_list">Event List</string>
    <string name="into_event_list">Event List</string>
    <string name="into_memo_list">Memo List</string>
    <string name="new_memo">New Memo</string>
    <string name="memo">Memo</string>
    <string name="memo_">Memo:</string>
    <string name="title">Title:</string>
    <string name="time">Time:</string>
    <string name="where">Where:</string>
    <string name="status">Status:</string>
    <string name="important">Important</string>
    <string name="complete">Complete</string>
    <string name="memo_content">Memo:</string>
    <string name="update">Update</string>
    <string name="dur_date">Dur Date:</string>
    <string name="create">Create</string>
    <string name="event">Event</string>
    <string name="memo_alert_title">Waring!</string>
    <string name="memo_alert_content">Are you sure complete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_format">--/--/--(---)</string>
    <string name="time_format">--:--</string>
    <string name="about_info">This is an example.</string>
    <string name="delete_all">Delete All</string>
    <string name="select_dialog">which do you choose?</string>
    <string name="delete_confirm">Are you sure to delete?</string>

</resources>
