<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_reader_skip"
        android:icon="@drawable/skip"
        android:title="@string/skip_to" />
    <item
        android:id="@+id/menu_reader_save_bookmark"
        android:icon="@drawable/savebookmark"
        android:title="@string/save_bookmark" />
    <item
        android:id="@+id/menu_reader_view_bookmark"
        android:icon="@drawable/viewbookmark"
        android:title="@string/view_bookmark" />


    <item
        android:id="@+id/menu_reader_nightmode"
        android:icon="@drawable/daynight"
        android:title="@string/night_mode" />
    <item
        android:id="@+id/menu_reader_back"
        android:icon="@drawable/uponelevel"
        android:title="@string/back" />
    <item
        android:id="@+id/menu_reader_brightness"
        android:icon="@drawable/brightness"
        android:title="@string/brightness" />
    <item
        android:id="@+id/menu_reader_setting"
        android:icon="@drawable/settings"
        android:title="@string/setting" />
    <item
        android:id="@+id/menu_reader_about"
        android:icon="@drawable/about"
        android:title="@string/about" />

</menu>
