<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_height="5dip" android:layout_width="fill_parent"
		android:id="@+id/textView" android:text=""></TextView>
	<TextView android:layout_height="25dip" android:layout_width="fill_parent"
		android:id="@+id/textView1" android:text="@string/bgd_title"
		android:background="#8C8C8C"></TextView>
	<ListView android:textSize="20sp" android:id="@+id/lsvBackground"
		android:layout_height="60dip" android:layout_width="fill_parent"
		android:text="@string/bgd_option" android:keepScreenOn="true"></ListView>

	<TextView android:layout_height="25dip" android:layout_width="fill_parent"
		android:id="@+id/textView3" android:text="@string/hdy_title"
		android:background="#8C8C8C"></TextView>
	<ListView android:textSize="20sp" android:id="@+id/lsvHoliday"
		android:layout_height="60dip" android:layout_width="fill_parent"
		android:text="@string/hdy_option"></ListView>

	<TextView android:id="@+id/textView5" android:layout_height="25dip"
		android:layout_width="fill_parent" android:text="@string/date_title"
		android:background="#8C8C8C"></TextView>
	<ListView android:textSize="20sp" android:id="@+id/lsvFirstDay"
		android:layout_height="60dip" android:layout_width="fill_parent"
		android:text="@string/abt_option"></ListView>

	<TextView android:layout_height="25dip" android:layout_width="fill_parent"
	android:id="@+id/textView7" android:text="@string/abt_title"
	android:background="#8C8C8C"></TextView>
	<ListView android:textSize="20sp" android:layout_below="@id/textView7"
		android:id="@+id/lsvAbout" android:layout_height="60dip"
		android:layout_width="fill_parent" android:text="@string/abt_option"></ListView>

</LinearLayout>
