<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox
        android:layout_marginLeft="5dp"
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bgd_enable_bg"
        android:textColor="#0000FF" />

    <TextView
        android:layout_marginLeft="5dp"
        android:textColor="#0000FF"
        android:layout_width="fill_parent"
        android:text="@string/bgd_color"
        android:layout_height="35dp"
        android:id="@+id/textView2"
        android:layout_below="@id/checkBox1"
        android:textSize="18sp" />

    <Spinner
        android:layout_below="@id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/spnTrac" />

    <Button
        android:textSize="18sp"
        android:layout_below="@id/spnTrac"
        android:layout_width="fill_parent"
        android:id="@+id/button3"
        android:layout_height="60dp"
        android:text="@string/bgd_sp_bg_pic" />

</RelativeLayout>
    